# cminpack

./: .cproject  .gitattributes  .gitignore  .project  .travis.yml  CMakeLists.txt  Makefile  README.md  appveyor.yml  chkder.c  chkder_.c  cminpack.h  cminpack.sln  cminpack.vcproj  cminpack.vcxproj  cminpack.vcxproj.filters  cminpackP.h  cminpack_dll.vcproj  covar.c  covar1.c  covar_.c  dist-exclude  dogleg.c  dogleg_.c  dpmpar.c  dpmpar_.c  enorm.c  enorm_.c  fdjac1.c  fdjac1_.c  fdjac2.c  fdjac2_.c  hybrd.c  hybrd1.c  hybrd1_.c  hybrd_.c  hybrj.c  hybrj1.c  hybrj1_.c  hybrj_.c  (+29 more)
.github/workflows/: msys2-cminpack-install.yaml  ubuntu-cminpack-install.yaml  windows-visual-studio-cminpack-install.yaml
cmake/: CMakeLists.txt  CMinpackConfig.cmake  FindMKL.cmake  cminpack.pc.in  cminpack_utils.cmake
cminpack.xcodeproj/: project.pbxproj
cuda/: Makefile
cuda/examples/: Makefile  tlmderc.cu  tlmdif1c.cu  tlmdifc.cu
cuda/examples/libcutil/: cutil.h  cutil_inline_runtime.h
doc/: cminpack.html  hybrj_.3  hybrj_.html  index.html
docs/: build_standalone.py  index.html
doxygen/: Doxyfile  build_docs.sh
examples/: CMakeLists.txt  Makefile  chkdrv.c  chkdrv_.c  cmpfiles.c  ctest.ref  dmchar.c  ftest.ref  genf77tests.c  hybdrv.c  hybdrv_.c  hyjdrv.c  hyjdrv_.c  ibmdpdr.c  ibmdpdr.f  ibmdpdr_.c  lmddrv.c  lmddrv_.c  lmdipt.c  lmfdrv.c  lmfdrv_.c  lmsdrv.c  lmsdrv_.c  runsmoke.cmake  runtest.cmake  ssq.h  ssqfcn.c  ssqjac.c  tchkder.c  tchkder_.c  tchkderc.c  tcppwrap.cpp  tenorm_.c  tenormc.c  test.ref  tfdjac2.c  tfdjac2_.c  tfdjac2c.c  thybrd.c  thybrd1.c  (+30 more)
examples/ref/: chkdrv.ref  hchkdrvc.ref  hhybdrvc.ref  hhyjdrvc.ref  hlmddrvc.ref  hlmfdrvc.ref  hlmsdrvc.ref  htlmder1c.ref  htlmderc.ref  hybdrv.ref  hybdrvc.ref  hyjdrv.ref  hyjdrvc.ref  ibmdpdr.ref  ibmdpdrc.ref  ldchkdrvc.ref  ldhybdrvc.ref  ldhyjdrvc.ref  ldibmdpdrc.ref  ldlmddrvc.ref  ldlmfdrvc.ref  ldlmsdrvc.ref  ldtchkderc.ref  ldtchkderc_box.ref  ldtenormc.ref  ldtfdjac2c.ref  ldthybrd1c.ref  ldthybrdc.ref  ldthybrj1c.ref  ldthybrjc.ref  ldtlmder1c.ref  ldtlmderc.ref  ldtlmdif1c.ref  ldtlmdifc.ref  lhybdrvc.ref  lhyjdrvc.ref  llmddrvc.ref  llmfdrvc.ref  llmsdrvc.ref  lmddrv.ref  (+22 more)
fortran/: Makefile
include/: cminpack.h  cminpackcpp.hpp
legacy_minpack/: chkder_.c  covar_.c  dogleg_.c  dpmpar_.c  enorm_.c  fdjac1_.c  fdjac2_.c  hybrd1_.c  hybrd_.c  hybrj1_.c  hybrj_.c  lmder1_.c  lmder_.c  lmdif1_.c  lmdif_.c  lmpar_.c  lmstr1_.c  lmstr_.c  minpack.h  minpackP.h  qform_.c  qrfac_.c  qrsolv_.c  r1mpyq_.c  r1updt_.c  rwupdt_.c
libminpack.xcodeproj/: project.pbxproj
libminpack.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/: chkder.c  cminpack.h  cminpackP.h  covar.c  covar1.c  dogleg.c  dpmpar.c  enorm.c  fdjac1.c  fdjac2.c  hybrd.c  hybrd1.c  hybrj.c  hybrj1.c  lmder.c  lmder1.c  lmdif.c  lmdif1.c  lmpar.c  lmstr.c  lmstr1.c  minpackP.h  qform.c  qrfac.c  qrsolv.c  r1mpyq.c  r1updt.c  rwupdt.c
src/f2c/: covar_.c  dogleg_.c  hybrd1_.c  hybrd_.c  hybrj1_.c  hybrj_.c  lmder_.c  lmdif1_.c  lmpar_.c  qrfac_.c  rwupdt_.c
